[metadata]
name = git-dumper
version = 1.0.8
author = Maxime Arthaud
author_email = maxime@arthaud.me
license = MIT
description = A tool to dump a git repository from a website
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arthaud/git-dumper
keywords = dump, git, repository, security, vulnerability, ctf
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Security

[options]
py_modules = git_dumper
python_requires = >=3.3
install_requires =
    PySocks>=1.7.1
    requests
    beautifulsoup4
    dulwich
    requests-pkcs12

[options.entry_points]
console_scripts =
    git-dumper = git_dumper:main
